# codecppstrap

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: cmake_lnx.yml  cmake_win.yml
src/: main.cpp
